--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+es d<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caça-Palavras 4 meses de GUI</title>
+    <title>Caça-Palavras 4 meses de GUI!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Caça-Palavras da Família</h1>
+    <h1>Caça-Palavras - 4 meses de Gui!</h1>
     <p>Encontre as palavras destacadas nas frases abaixo:</p>
  
     <ul id="frases">
