--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caça-Palavras 4 meses de GUI!</title>
-     <link rel="icon" href="favicon.ico" type="image/x-icon">
+     <link rel="icon" href="https://raw.githubusercontent.com/patpires/gui4m/refs/heads/main/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
